--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,8 @@
+/* 
+(CritterCave)
+Base CSS file
+*/
+
 /* the --color-header and others are CSS variables, which we access later. 
    I chose these colors using https://venngage.com/tools/accessible-color-palette-generator
    I liked the contrasting palette2 colors.
