--- a/templates/main.html
+++ b/templates/main.html
@@ -12,5 +12,7 @@
 <p><a href="{{ url_for('user_profile', uid=1) }}">Nina's profile</a></p>
 <p><a href="{{ url_for('user_profile', uid=3) }}">Ruth's profile</a></p>
 
+<p><a href="{{ url_for('signup') }}">Test signup</a></p>
+
 
 {% endblock %}
