small edit to main

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,6 +12,7 @@
 <p><a href="{{ url_for('critter_upload') }}">Upload a Critter</a></p>
 <p><a href="{{ url_for('user_profile', uid=1) }}">Nina's profile</a></p>
 <p><a href="{{ url_for('user_profile', uid=3) }}">Ruth's profile</a></p>
+<p><a href="{{ url_for('signup') }}">Test signup</a></p>
 
 <h2>Critters</h2>
 <p><a href="{{ url_for('critter_page', cid=2) }}">Critter Tommy</a></p>
