sign in working

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,19 +1,15 @@
 <!-- (CritterCave) -->
-<!-- HTML template for the sign up page / form -->
+<!-- HTML template for the sign in page / form -->
 
 {% extends "base.html" %}
 
 {% block main_content %}
-<h1>Sign Up</h1>
-<h3>Welcome to Critter Cave!</h3>
-<h3>Sign up below.</h3>
+<h1>Sign In</h1>
+<h3>Welcome back to Critter Cave!</h3>
+<h3>Sign in below.</h3>
 
 <form method=POST action="">
     <table>
-        <tr>
-            <td><label for="name">Name</label></td>
-            <td><input id="name" name='name' value=""></td> 
-        </tr>
         <tr>
             <td><label for="username">Username</label></td>
             <td><input id="username" name='username' value=""></td>
