--- a/templates/critter.html
+++ b/templates/critter.html
@@ -3,11 +3,35 @@
 
 {% extends "base.html" %}
 {% block main_content %}
-    <h1>{{ critter_info.name }}</h1>
-    <p>Made by: <a href="{{ url_for('user_profile', uid=user.uid) }}">
-        {{ user.name }}</a></p>
-    <h2>Description</h2>
-    <p>{{ critter_info.description }}</p>
+    <div class="criter">
+        <h1>{{ critter_info.name }}</h1>
+        <p>Made by: <a href="{{ url_for('user_profile', uid=user.uid) }}">
+            {{ user.name }}</a></p>
+        <h2>Description</h2>
+        <p>{{ critter_info.description }}</p>
 
-    <p><a href="{{ url_for('index') }}">Back to Main Page</a></p>
+        <p><a href="{{ url_for('index') }}">Back to Main Page</a></p>
+    </div>
+
+    <div class="stories">
+        <h2>Stories</h2>
+        <h3>Stories written by {{ critter_info.name }}'s creator, {{ user.name }}</h3>
+        <ul>
+        {% for story in stories_by_user %}
+            <li>{{ story.critter_story }}</li>
+        {% else %}
+            <li>No stories found by this author.</li>
+        {% endfor %}
+        </ul>
+
+        <h3>Stories written by other users</h3>
+        <ul>
+        {% for story in stories_not_by_user %}
+            <li>{{ story.critter_story }}</li>
+        {% else %}
+            <li><a href="{{ url_for('story_upload', cid=critter_info.cid) }}">Write {{ critter_info.name }}'s first story!</a></li>
+        {% endfor %}
+        </ul>
+    </div>
+    
 {% endblock %}
