--- a/templates/main.html
+++ b/templates/main.html
@@ -21,6 +21,6 @@
 
 <h2>Upload Forms</h2>
 <p><a href="{{ url_for('critter_upload') }}">Critter Upload</a></p>
-<p><a href="{{ url_for('critter_upload', cid=2) }}">Story Upload for Critter 2 (Tommy)</a></p>
+<p><a href="{{ url_for('story_upload', cid=2) }}">Story Upload for Critter 2 (Tommy)</a></p>
 
 {% endblock %}
