--- a/templates/story_upload.html
+++ b/templates/story_upload.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
 {% block main_content %}
-<h1>Write the critter's story!</h1>
+<h1>Write This Critter's Epic Tale</h1>
 
-<form method=post action="">
+<form method="post" action="">
     <fieldset>
-        <table>
-            <tr><td><label for="critter-story">Story:</label></td>
-                <td><input id="critter-story" type="text" name="critter-story"
-                    placeholder="It was a dark and stormy night..."></td></tr>
-        </table>
-        <p> <input type='submit' value='Upload Story'> </p>
+        <legend>Story Details</legend>
+        <p><label for="critter-story"><strong>Your story begins here:</strong></label><br>
+            <textarea id="critter-story" name="critter-story" rows="5" cols="50"
+                placeholder="It was a dark and stormy night..."></textarea></p>
+        
+        <p><input type="submit" value="Submit Your Story"></p>
     </fieldset>
 </form>
 
