--- a/templates/main.html
+++ b/templates/main.html
@@ -8,12 +8,13 @@
 
 <p>Welcome to our app. This is the main page</p>
 
+<h2>Login</h2>
+<p><a href="{{ url_for('welcome') }}">Welcome page: test sign-up and sign-in</a></p>
+
 <h2>Users</h2>
 <p><a href="{{ url_for('critter_upload') }}">Upload a Critter</a></p>
 <p><a href="{{ url_for('user_profile', uid=1) }}">Nina's profile</a></p>
 <p><a href="{{ url_for('user_profile', uid=3) }}">Ruth's profile</a></p>
-<p><a href="{{ url_for('signup') }}">Test sign up</a></p>
-<p><a href="{{ url_for('signin') }}">Test sign in</a></p>
 
 <h2>Critters</h2>
 <p><a href="{{ url_for('critter_page', cid=2) }}">Critter Tommy</a></p>
