--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,29 +1,40 @@
 <!-- (CritterCave) -->
 <!-- HTML template for the sign up page / form -->
 
-{% extends "base.html" %}
+<!doctype html>
+<html lang='en'>
+<head>
+    <meta charset='utf-8'>
+    <!-- for mobile-friendly pages -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name=author content="">
+    <title>{{ page_title }}</title>
+    <link rel='stylesheet' href="{{url_for('static', filename = 'style.css')}}">
+</head>
+<body>
+    <nav>
+        <ul>
+        <li><a href="{{url_for('welcome')}}"><</a></li>
+    </nav>
+    <h1>Sign Up</h1>
+    <h3>Welcome to Critter Cave!</h3>
+    <h3>Sign up below.</h3>
 
-{% block main_content %}
-<h1>Sign Up</h1>
-<h3>Welcome to Critter Cave!</h3>
-<h3>Sign up below.</h3>
-
-<form method=POST action="">
-    <table>
-        <tr>
-            <td><label for="name">Name</label></td>
-            <td><input id="name" name='name' value=""></td> 
-        </tr>
-        <tr>
-            <td><label for="username">Username</label></td>
-            <td><input id="username" name='username' value=""></td>
-        </tr>
-        <tr>
-            <td><label for="password">Password</label></td>
-            <td><input id="password" name='password' value=""></td>
-        </tr>
-    </table>
-    <input type="submit" name="submit" value="sign up">
-</form>
-
-{% endblock %}
+    <form method=POST action="">
+        <table>
+            <tr>
+                <td><label for="name">Name</label></td>
+                <td><input id="name" name='name' value=""></td> 
+            </tr>
+            <tr>
+                <td><label for="username">Username</label></td>
+                <td><input id="username" name='username' value=""></td>
+            </tr>
+            <tr>
+                <td><label for="password">Password</label></td>
+                <td><input id="password" name='password' value=""></td>
+            </tr>
+        </table>
+        <input type="submit" name="submit" value="sign up">
+    </form>
+</body>
