update signin button value

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -31,7 +31,7 @@
                 <td><input id="password" name='password' value=""></td>
             </tr>
         </table>
-        <input type="submit" name="submit" value="sign up">
+        <input type="submit" name="submit" value="sign in">
     </form>
     <p>Test Account:</p>
     <p>username = 'test'</p>
