--- a/templates/main.html
+++ b/templates/main.html
@@ -23,4 +23,9 @@
 <p><a href="{{ url_for('critter_upload') }}">Critter Upload</a></p>
 <p><a href="{{ url_for('story_upload', cid=2) }}">Story Upload for Critter 2 (Tommy)</a></p>
 
+<h2>Settings</h2>
+<p><a href="{{ url_for('settings', uid=1) }}">Settings for User 1 (Nina)</a></p>
+<p><a href="{{ url_for('settings', uid=2) }}">Settings for User 2 (Ruth)</a></p>
+
+
 {% endblock %}
