--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name=author content="">
     <title>{{ page_title }}</title>
+    <script src="script.js"></script>
     <link rel='stylesheet' href="{{url_for('static', filename = 'style.css')}}">
     {% block head_stuff %} {% endblock %}
 </head>
