--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,29 +1,59 @@
 <!-- (CritterCave) -->
 <!-- HTML template for the signup page / form -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href="{{url_for('static', filename = 'style.css')}}">
+    <script src="{{ url_for('static', filename='/script.js') }}"></script>
+    <title>Document</title>
+ </head>
+ <body>
 
-{% extends "base.html" %}
 
-{% block main_content %}
-<h1>Sign Up</h1>
-<h3>Welcome to Critter Cave!</h3>
-<h3>Sign up below.</h3>
+<div id="mySidebar" class="sidebar">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="{{url_for('signin')}}">Sign Up</a>
+  <a href="#">Sign In</a>
+</div>
 
-<form method=POST action="">
-    <table>
-        <tr>
-            <td><label for="name">Name</label></td>
-            <td><input id="name" name='name' value=""></td> 
-        </tr>
-        <tr>
-            <td><label for="username">Username</label></td>
-            <td><input id="username" name='username' value=""></td>
-        </tr>
-        <tr>
-            <td><label for="password">Password</label></td>
-            <td><input id="password" name='password' value=""></td>
-        </tr>
-    </table>
-    <input type="submit" name="submit" value="sign up">
-</form>
+<div id="main">
 
-{% endblock %}
+    <div id="log_container">
+        <button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>
+        <h1>Sign Up</h1>
+
+        <h2>Welcome to Critter Cave!</h3>
+        <h2>Sign up below.</h3> 
+        <h2>Collapsed Sidebar</h2>
+        <p>Content...</p>
+
+        <form id="sign_up_form" method=POST action="">
+            <table>
+                <tr>
+                    <td><label for="name">Name</label></td>
+                    <td><input id="name" name='name' value=""></td> 
+                </tr>
+                <tr>
+                    <td><label for="username">Username</label></td>
+                    <td><input id="username" name='username' value=""></td>
+                </tr>
+                <tr>
+                    <td><label for="password">Password</label></td>
+                    <td><input id="password" name='password' value=""></td>
+                </tr>
+            </table>
+            <input type="submit" name="submit" value="sign up">
+        </form>
+
+    </div>
+    
+</div>
+
+
+    
+ </body>
+ </html>
+
+
