fixed html for sign in and sign up

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,8 +14,8 @@
 
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="{{url_for('signin')}}">Sign Up</a>
-  <a href="#">Sign In</a>
+  <a href="{{url_for('signup')}}">Sign Up</a>
+  <a href="{{url_for('signin')}}">Sign In</a>
 </div>
 
 <div id="main">
