--- a/templates/signin.html
+++ b/templates/signin.html
@@ -9,31 +9,43 @@
     <meta name=author content="">
     <title>{{ page_title }}</title>
     <link rel='stylesheet' href="{{url_for('static', filename = 'style.css')}}">
+    <script src="{{ url_for('static', filename='/script.js') }}"></script>
+
 </head>
 <body>
-    <nav>
-        <ul>
-        <li><a href="{{url_for('welcome')}}"><</a></li>
-    </nav>
+    <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="{{url_for('signup')}}">Sign Up</a>
+        <a href="{{url_for('signin')}}">Sign In</a>
+        <a href="{{url_for('welcome')}}">Back</a>
+    </div>
 
-    <h1>Sign In</h1>
-    <h3>Welcome back to Critter Cave!</h3>
-    <h3>Sign in below.</h3>
 
-    <form method=POST action="">
-        <table>
-            <tr>
-                <td><label for="username">Username</label></td>
-                <td><input id="username" name='username' value=""></td>
-            </tr>
-            <tr>
-                <td><label for="password">Password</label></td>
-                <td><input id="password" name='password' value=""></td>
-            </tr>
-        </table>
-        <input type="submit" name="submit" value="sign in">
-    </form>
-    <p>Test Account:</p>
-    <p>username = 'test'</p>
-    <p>password = 'password'</p>
+    <div id="main">
+
+        <div id="log_container">
+            <button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>
+
+            <h1>Sign In</h1>
+            <h3>Welcome back to Critter Cave!</h3>
+            <h3>Sign in below.</h3>
+            
+            <form id="sign_up_form" method=POST action="">
+                <table>
+                    <tr>
+                        <td><label for="username">Username</label></td>
+                        <td><input id="username" name='username' value=""></td>
+                    </tr>
+                    <tr>
+                        <td><label for="password">Password</label></td>
+                        <td><input id="password" name='password' value=""></td>
+                    </tr>
+                </table>
+                <input type="submit" name="submit" value="sign in">
+            </form>
+            <p>Test Account:</p>
+            <p>username = 'test'</p>
+            <p>password = 'password'</p>
+            </div>
+    </div>
 </body>
