--- a/templates/story_upload.html
+++ b/templates/story_upload.html
@@ -6,7 +6,7 @@
 
     <form method="post" action="">
 
-        <!-- Block: Story Writing -->
+        <!-- Story Writing -->
         <section class="settings-block">
             <h2>Story Details</h2>
             <p class="block-subtitle">Craft a tale worthy of your critter.</p>
