--- a/templates/critter_upload.html
+++ b/templates/critter_upload.html
@@ -6,7 +6,7 @@
 
     <form method="post" action="" enctype="multipart/form-data">
 
-        <!-- Block: Critter Photo -->
+        <!-- Critter Photo -->
         <section class="settings-block">
             <h2>Upload Critter Photo</h2>
             <p class="block-subtitle">Choose an image to represent your critter.</p>
@@ -17,7 +17,7 @@
             </p>
         </section>
 
-        <!-- Block: Critter Information -->
+        <!-- Critter Information -->
         <section class="settings-block">
             <h2>Critter Information</h2>
             <p class="block-subtitle">Tell the world more about your critter.</p>
