working lookup form

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,9 +34,8 @@
           <label>kind:
                 <select required name="kind">
                     <option value="">choose one</option>
-                    <option value="person">user</option>
-                    <option value="movie">critter</option>
-                    <option value="movie">story</option>
+                    <option value="user">user</option>
+                    <option value="critter">critter</option>
                 </select>
         </label>
         <input type="submit" value="search">
