settings forms working

--- a/static/style.css
+++ b/static/style.css
@@ -97,6 +97,11 @@ nav button:hover, button:focus, nav a:hover, nav a:focus {
 }
 
 
+
+/****************************************/
+/********* Settings page styles *********/
+/****************************************/
+
 /* Page spacing */
 .settings {
     max-width: 900px;
