--- a/templates/base.html
+++ b/templates/base.html
@@ -19,27 +19,29 @@
 
 <div class="topbar">
     <nav>
-      <ul>
-        <li><a href="{{url_for('index')}}">Home</a></li>
-        <li><a href="{{url_for('about')}}">About</a></li>
-      </ul>
+        <ul>
+            <li><a href="{{url_for('index')}}">Home</a></li>
+            <li><a href="{{url_for('about')}}">About</a></li>
+        </ul>
     </nav>
 
-  <!-- search bar -->
     <form class="search" method="GET" action="/query/">
-      <p>
-          <label>search: 
-            <input type="text" required name="query">
-          </label>
-          <label>kind:
+        <div class="search-row">
+
+            <label>search:
+                <input type="text" required name="query">
+            </label>
+
+            <label>kind:
                 <select required name="kind">
                     <option value="">choose one</option>
                     <option value="user">user</option>
                     <option value="critter">critter</option>
                 </select>
-        </label>
-        <input type="submit" value="search">
-      </p>
+            </label>
+
+            <input type="submit" value="search">
+        </div>
     </form>
 </div>
 {% endblock %}
