Fixing my base error

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
 {% if messages %}
 <div id="messages">
   {% for msg in messages %}
-  <p>{{*** msg ***}}</p>
+  <p>*** {{msg}} ***</p>
   {% endfor %}
 </div>
 {% endif %}
