--- a/static/style.css
+++ b/static/style.css
@@ -122,6 +122,7 @@ h1 {
     font-weight: bold;
     color: white;
     background: var(--accent-plum);
+    border: none;
     border-radius: 5px;
     display: flex;
     justify-content: center;
