--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,17 +3,33 @@
 
 {% extends "base.html" %}
 {% block main_content %}
-    <h1>{{ user.name }}</h1>
+    <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="{{url_for('signup')}}">Sign Up</a>
+        <a href="{{url_for('signin')}}">Sign In</a>
+        <a href="{{url_for('welcome')}}">Back</a>
+        
+    </div>
 
-    <h2>Critters:</h2>
-    <article>
-        <ol>
-            {% for critter in critters %}
-            <li><a href="{{ url_for('critter_page', cid=critter.cid) }}">
-                {{ critter.name }}</a></li>
-            {% endfor %}
-        </ol>
-    </article>
+    <div>
+        <button class="openbtn" onclick="openNav()">&#9776; </button>
+    </div>
+    
 
-    <p><a href="{{ url_for('index') }}">Back to Main Page</a></p>
+    <div  id="main" class="main">
+
+        <h1>{{ user.name }}</h1>
+
+        <h2>Critters:</h2>
+        <article>
+            <ol>
+                {% for critter in critters %}
+                <li><a href="{{ url_for('critter_page', cid=critter.cid) }}">
+                    {{ critter.name }}</a></li>
+                {% endfor %}
+            </ol>
+        </article>
+
+        <p><a href="{{ url_for('index') }}">Back to Main Page</a></p>
+    </div>
 {% endblock %}
